# mqtt-binary-sensor

./: .gitignore  LICENSE  README.md  platformio.ini
host/: motion-monitor.service  pyproject.toml  requirements.txt  setup.py
host/motion_monitor/: __init__.py  __main__.py
include/: platform.h
src/: main.cpp
