[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "motion_monitor"
version = "0.1.1"
authors = [{name="Nash Kaminski", email="nashkaminski@kaminski.io" }]
description = "Tool to read the state of a motion sensor using an Arduino compatible board and report the status over MQTT"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
motion-monitor = "motion_monitor.__main__:cli"
